--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.5.0",
-    "typescript": "^5.2.2",
-    "vite": "^4.5.0",
-    "eslint": "^8.52.0",
-    "eslint-plugin-vue": "^9.17.0",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
+    "@vitejs/plugin-vue": "^4.5.0",
+    "eslint": "^8.52.0",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-vue": "^9.17.0",
     "prettier": "^3.0.3",
-    "sass": "^1.69.0"
+    "sass": "^1.69.0",
+    "typescript": "^5.2.2",
+    "vite": "^4.5.0"
   }
 }
