--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext .ts,.vue"
+    "lint": "eslint . --ext .ts,.vue",
+    "test": "jest"
   },
   "dependencies": {
     "pinia": "^2.1.4",
@@ -14,6 +15,7 @@
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
     "@vitejs/plugin-vue": "^4.5.0",
@@ -21,8 +23,11 @@
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-prettier": "^5.2.6",
     "eslint-plugin-vue": "^9.17.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.0.3",
     "sass": "^1.69.0",
+    "ts-jest": "^29.3.2",
     "typescript": "^5.2.2",
     "vite": "^4.5.0"
   }
